# cocoro

./: .gitignore  LICENSE  Memo.md  README.md  pyproject.toml  renovate.json
.github/workflows/: cocoro-test.yml
src/cocoro/: ;w  __init__.py  __main__.py  cli.py  core.py
tests/: test_cocoro.py
tests/data/: config.yml
