[tool.poetry]
name = "cocoro"
version = "0.1.3"
description = "Utilities to use Sharp, COCORO API"
authors = ["rcmdnk <rcmdnk@gmail.com>"]
repository = "https://github.com/rcmdnk/cocoro"
homepage = "https://github.com/rcmdnk/cocoro"
readme = "README.md"
license = "Apache-2.0"
keywords = ['Sharp', 'API']

[tool.poetry.dependencies]
python = "^3.6"
fire = "^0.4.0"
requests = "^2.25.1"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
cocoro = "cocoro:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
