[tool.poetry]
name = "cocoro"
version = "0.1.6"
description = "Utilities to use Sharp, COCORO API"
authors = ["rcmdnk <rcmdnk@gmail.com>"]
repository = "https://github.com/rcmdnk/cocoro"
homepage = "https://github.com/rcmdnk/cocoro"
readme = "README.md"
license = "Apache-2.0"
keywords = ['Sharp', 'API']

[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.7.0"
requests = "^2.25.1"
PyYAML = "^6.0.0"

[poetry.group.dev.dependencies]
pytest = "^9.0.0"

[tool.poetry.scripts]
cocoro = "cocoro:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
